added response for assign body metrics route
